# scratch-accelerate

./: BlasTest.hs  CHANGELOG.md  Main.hs  README.md  cabal.project  scratch-accelerate.cabal
