cabal-version:       >=1.10
name:                scratch-accelerate
version:             0.1.0.0
license-file:        LICENSE
author:              statusfailed
maintainer:          sf@statusfailed.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable scratch-accelerate
  main-is:             Main.hs
  build-depends:        base >=4.13 && <4.14
                      , accelerate
                      , accelerate-llvm
                      , accelerate-llvm-native
                      , accelerate-llvm-ptx
  ghc-options: -threaded
  default-language:    Haskell2010
