cabal-version:       >=1.10
name:                scratch-accelerate
version:             0.1.0.0
license-file:        LICENSE
author:              statusfailed
maintainer:          sf@statusfailed.com
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable scratch-accelerate
  main-is:             Main.hs
  --other-modules:       BlasTest
  build-depends:        base >=4.13 && <4.14
                      , accelerate >= 1.3
                      , accelerate-llvm >= 1.3
                      , accelerate-llvm-native >= 1.3
                      , accelerate-llvm-ptx >= 1.3
--                      , accelerate-blas >= 0.3
--                      , blas-hs >= 0.1
--                      , linear
--                      , linear-accelerate
  -- NOTE: we have to link with cblas to run blas computations, since we're
  -- using the FFI.
  extra-libraries: cblas
  ghc-options: -threaded
  default-language:    Haskell2010
